# rustdns

./: .gitignore  Cargo.toml  README.md  README.tpl
dig/: Cargo.toml  main.rs  util.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: from_slice.rs
generate_tests/: Cargo.toml  main.rs
old_src/: punycode.rs
src/: cfg.rs  display.rs  dns.rs  errors.rs  from_str.rs  io.rs  lib.rs  main.rs  name.rs  resource.rs  types.rs  util.rs
src/clients/: doh.rs  json.rs  mime.rs  mod.rs  resolver.rs  stats.rs  tcp.rs  to_urls.rs  udp.rs
src/generate_tests/: main.rs
src/rustdns/: main.rs
src/zones/: mod.rs  parser.rs  parser_tests.rs  preprocessor.pest  preprocessor.rs  process.rs  tokens.rs  zones.pest
tests/: dns.rs  from_slice.rs  resolver.rs  test_data.yaml
