# generate_tests/Cargo.toml 

[package]
name = "generate_tests"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
hex = "0.4.3"
rustdns = { path = "../", default-features = false, features = ["udp"] }


[[bin]]
name = "generate_tests"
path = "main.rs"
